Cambio de script de sql

--- a/Views/TiposVehiculos/Delete.cshtml
+++ b/Views/TiposVehiculos/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model GestionEstacionamientoRicardo.Models.TiposVehiculo
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Eliminar";
 }
 
 <div class="container mt-5">
@@ -9,6 +9,7 @@
 
     <div class="alert alert-warning">
         <h3>¿Estás seguro de que deseas eliminar este tipo de vehículo?</h3>
+        <h4>Al eliminar el Tipo de vehiculo eliminaras los registros de Vehiculos con este tipo y los registros del estacionamiento de esta placa</h4>
         <p>Esta acción no se puede deshacer.</p>
     </div>
 
