--- a/Views/Vehiculos/Delete.cshtml
+++ b/Views/Vehiculos/Delete.cshtml
@@ -9,6 +9,7 @@
     
     <div class="alert alert-warning">
         <h3>¿Estás seguro de que deseas eliminar este vehículo?</h3>
+        <h4>Al eliminar este vehiculo eliminaras los registros del estacionamiento de esta placa</h4>
         <p>Esta acción no se puede deshacer.</p>
     </div>
 
